tests/neg/i18302e.scala
def polyFun: PolyFunction {  } = // error
  new PolyFunction {  } // error

def polyFun(f: PolyFunction {  }) = () // error
